corrected type error

--- a/list.html
+++ b/list.html
@@ -88,7 +88,7 @@
 		<br />
 		<hr />
 		<h3>Nestes List</h3>
-		<ul style="square">
+		<ul type="square">
 			<li>
 				Unordered List in Ordered List<br />
 				<ul>
