--- a/list.html
+++ b/list.html
@@ -92,11 +92,19 @@
 			<li>
 				Unordered List in Ordered List<br />
 				<ul>
-					<li>Apple1</li>
+					<li>
+						Another List
+						<ol type="1">
+							<li>Jan</li>
+							<li>Feb</li>
+							<li>March</li>
+						</ol>
+					</li>
 					<li>Mango2</li>
-                </li>
 					<li>Banana3</li>
 				</ul>
+			</li>
+
 			<li>Mango</li>
 			<li>Banana</li>
 		</ul>
