--- a/first.html
+++ b/first.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script type="text/javascript" src="first.js"></script>
-		<link rel="stylesheet" href="first.css"></link>
+		<link rel="stylesheet" href="css/first.css"></link>
 		<title>Document</title>
 	</head>
 	<body>
