--- a/Tailwind/Demo Tailwind/index.html
+++ b/Tailwind/Demo Tailwind/index.html
@@ -11,7 +11,7 @@
 			Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eum
 			nisi, repudiandae a sit sunt saepe corrupti odio illo autem qui adipisci
 			minus.
-			<div class="bg-purple-200 text-white mx-5">this</div>
+			<div class="bg-purple-200 text-white mx-5">Man</div>
 		</div>
 	</body>
 </html>
