--- a/Tailwind/Tailwind Tutorial/Tutorial-4.html
+++ b/Tailwind/Tailwind Tutorial/Tutorial-4.html
@@ -3,10 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Sizing and Typography</title>
 		<link rel="stylesheet" href="style.css" />
+		<title>Sizing and Typography</title>
 	</head>
 	<body>
+		<a class="text-blue-400 underline" href="index.html">Home</a>
 		<div class="text-center mb-10">
 			<b>Tailwind CSS Width Class</b>
 			<div class="flex">
