--- a/Tailwind/Tailwind Tutorial/Tutorial-4.html
+++ b/Tailwind/Tailwind Tutorial/Tutorial-4.html
@@ -7,7 +7,9 @@
 		<title>Sizing and Typography</title>
 	</head>
 	<body>
-		<a class="text-blue-400 underline" href="index.html">Home</a>
+		<div class="text-center">
+			<a class="text-blue-400 underline text-3xl" href="index.html">Home</a>
+		</div>
 		<div class="text-center mb-10">
 			<b>Tailwind CSS Width Class</b>
 			<div class="flex">
