--- a/Tailwind/Tailwind Tutorial/index.html
+++ b/Tailwind/Tailwind Tutorial/index.html
@@ -7,8 +7,14 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<a class="text-blue-400 underline" href="Tutorial-4.html"
-			>Tutorial-4: Sizing and Topography</a
-		>
+		<div class="text-center text-3xl">
+			<a class="text-blue-400 underline" href="Tutorial-4.html"
+				>Tutorial-4: Sizing and Topography</a
+			>
+			<br />
+			<a class="text-blue-400 underline" href="Tutorial-5.html"
+				>Tutorial-5: Margins, Borders and Padding</a
+			>
+		</div>
 	</body>
 </html>
