--- a/Tailwind/Tailwind Tutorial/index.html
+++ b/Tailwind/Tailwind Tutorial/index.html
@@ -7,14 +7,17 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<div class="text-center text-3xl">
-			<a class="text-blue-400 underline" href="Tutorial-4.html"
-				>Tutorial-4: Sizing and Topography</a
-			>
-			<br />
-			<a class="text-blue-400 underline" href="Tutorial-5.html"
-				>Tutorial-5: Margins, Borders and Padding</a
-			>
-		</div>
+		<ul class="text-center text-3xl list-none">
+			<li>
+				<a class="text-blue-400 underline" href="Tutorial-4.html">
+					Tutorial-4: Sizing and Topography
+				</a>
+			</li>
+			<li>
+				<a class="text-blue-400 underline" href="Tutorial-5.html">
+					Tutorial-5: Margins, Borders and Padding
+				</a>
+			</li>
+		</ul>
 	</body>
 </html>
