--- a/Tailwind/Tailwind Tutorial/Tutorial-5.html
+++ b/Tailwind/Tailwind Tutorial/Tutorial-5.html
@@ -387,6 +387,16 @@
 				Purple
 			</button>
 		</div>
-		<button class="text-white bg-sky-500 rounded-2xl p-2">Click Meow!!</button>
+		<button class="text-white bg-sky-500 rounded-full p-3 mx-5">
+			Click Meow!!
+		</button>
+		<div class="m-13 bg-red-600 xsm:bg-blue-500 md:bg-purple-700">
+			This is a customized margin and
+			<span class="text-10"> font size - 10 </span> made in tailwind.config.js
+			file. Look into confsamir.js fule for full list of configuration settings
+			and values for tailwind css.<br />
+			Use npx tailwindcss init confsam --full to view full list of tailwindcss
+			configuration in a file named confsam.js.
+		</div>
 	</body>
 </html>
