dark mode practice

--- a/Tailwind/Tailwind Tutorial/Tutorial-5.html
+++ b/Tailwind/Tailwind Tutorial/Tutorial-5.html
@@ -24,7 +24,7 @@
 				</div>
 			</div>
 			<div class="flex justify-center">
-				<div class="m-8 bg-green-300 w-24 h-24">
+				<div class="m-8 bg-green-300 w-24 h-24 dark:bg-slate-700">
 					<div class="-m-4 border-2 border-green-800 bg-green-600 w-16 h-16">
 						-m-4 in m-8
 					</div>
