ferw changes made

--- a/Tailwind/Tailwind Tutorial/Tutorial-5.html
+++ b/Tailwind/Tailwind Tutorial/Tutorial-5.html
@@ -376,7 +376,7 @@
 			</button>
 			<button
 				type="button"
-				class="bg-yellow-400 hover:bg-yellow-500 focus:ring-yellow-300 text-center me-2 mb-2 dark:focus:ring-yellow-900 btn"
+				class="btn bg-yellow-400 hover:bg-yellow-500 focus:ring-yellow-300 dark:focus:ring-yellow-900"
 			>
 				Yellow
 			</button>
