--- a/Tailwind/Project 1 - Facebook Clone/index.html
+++ b/Tailwind/Project 1 - Facebook Clone/index.html
@@ -4,44 +4,55 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Log into Facebook</title>
+		<link
+			rel="icon"
+			href="https://static.xx.fbcdn.net/rsrc.php/yv/r/B8BxsscfVBr.ico"
+		/>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<div
 			class="container max-w-full pt-10 pb-14 bg-gray-100 flex flex-col items-center"
 		>
-			<img class="w-60" src="Facebook.svg" alt="Facebook" />
+			<img class="w-1/3 lg:w-80" src="Facebook.svg" alt="Facebook" />
 			<div
-				class="flex flex-col bg-white w-[396px] items-center rounded-lg px-4 shadow-xl border-gray-300 border-[1px]"
+				class="flex flex-col w-2/5 md:w-1/3 lg:w-96 bg-white items-center rounded-lg px-4 shadow-xl border-gray-300 border-[1px]"
 			>
 				<p
-					class="text-xs sm:text-sm md:text-base lg:text-lg leading-6 pt-6 pb-4 text-gray-950"
+					class="text-[10px] sm:text-sm md:text-base lg:text-lg leading-6 pt-2 pb-1 sm:pt-4 sm:pb-2 lg:pt-6 lg:pb-4 text-gray-950"
 				>
 					Log Into Facebook
 				</p>
 				<input
-					class="my-2 w-full rounded-md px-4 py-3 text-lg tracking-tight border-[1px] border-gray-300 placeholder:font-normal"
+					class="md:my-2 w-full rounded-md px-1 sm:px-2 md:px-3 lg:px-4 py-1 sm:py-2 md:py-3 text-[10px] sm:text-sm md:text-base lg:text-lg tracking-tight border-[1px] border-gray-300 placeholder:font-normal"
 					type="text"
 					placeholder="Email or phone number"
 				/>
 				<input
-					class="my-1 w-full rounded-md px-4 py-3 text-lg tracking-tight border-[1px] border-gray-300 placeholder:font-normal"
+					class="my-1 w-full rounded-md px-1 sm:px-2 md:px-3 lg:px-4 py-1 sm:py-2 md:py-3 text-[10px] sm:text-sm md:text-base lg:text-lg tracking-tight border-[1px] border-gray-300 placeholder:font-normal"
 					type="password"
 					placeholder="Password"
 				/>
 				<button
-					class="w-full bg-blue-500 text-white my-2 mx-4 p-2 rounded-md font-semibold text-2xl hover:bg-blue-600"
+					class="w-full bg-blue-org text-white my-1 md:my-2 p-1 md:p-2 rounded-md font-semibold text-xs sm:text-sm md:text-lg lg:text-xl hover:bg-blue-hov"
 				>
 					Log In
 				</button>
-				<span class="pt-2 pb-1 mb-2"
-					><a href="#" class="text-blue-600 text-sm hover:underline"
-						>Forgot account?</a
-					></span
-				>
-				<hr class="w-full" />
+				<div class="pt-0 md:pt-2 pb-0 md:pb-1 md:mb-2">
+					<a
+						href="#"
+						class="text-blue-org text-[9px] sm:text-xs md:text-sm lg:text-base hover:underline"
+						>Forgotten account?</a
+					>
+				</div>
+				<div class="flex flex-row w-full justify-around items-center">
+					<hr class="w-full mx-3" />
+					<span class="text-gray-500 text-xs sm:text-sm lg:text-base">or</span>
+					<hr class="w-full mx-3" />
+				</div>
+
 				<button
-					class="mt-4 mb-5 py-3 px-4 bg-green-500 text-white text-lg font-bold rounded-md hover:bg-green-600"
+					class="mt-2 md:mt-4 mb-3 md:mb-5 py-1 sm:py-2 md:py-3 px-2 sm:px-3 md:px-4 w-fit bg-green-org text-white text-[9px] sm:text-xs md:text-sm lg:text-lg font-bold rounded-md hover:bg-green-hov"
 				>
 					Create new account
 				</button>
