--- a/Tailwind/Project 2 - Responsive QR Code/index.html
+++ b/Tailwind/Project 2 - Responsive QR Code/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Responsive QR Code</title>
 		<link
 			rel="shortcut icon"
 			href="./images/favicon-32x32.png"
@@ -12,11 +12,15 @@
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 	<body class="bg-lightGray font-outfit">
-		<div class="flex justify-center items-center h-screen">
+		<main class="flex justify-center items-center h-screen">
 			<section
-				class="rounded-3xl bg-white p-4 text-grayishBlue w-4/5 mobile:w-3/5 sm:w-2/5 lg:w-3/12 xl:w-2/12 h-fit text-center"
+				class="rounded-3xl bg-white p-4 text-grayishBlue w-4/5 mobile:w-3/5 sm:w-2/5 md:w-4/12 lg:w-3/12 xl:w-[20%] h-fit text-center shadow-2xl"
 			>
-				<img src="./images/image-qr-code.png" class="rounded-xl mb-6" />
+				<img
+					src="./images/image-qr-code.png"
+					alt="QR Code"
+					class="rounded-xl mb-6"
+				/>
 				<h1 class="font-bold text-black mb-4">
 					Improve your front-end skills by buidling projects
 				</h1>
@@ -25,6 +29,6 @@
 					to the next level
 				</p>
 			</section>
-		</div>
+		</main>
 	</body>
 </html>
