--- a/Tailwind/Project 3 - Blog Preview Card/index.html
+++ b/Tailwind/Project 3 - Blog Preview Card/index.html
@@ -10,12 +10,12 @@
 			href="./images/favicon-32x32.png"
 		/>
 		<title>Frontend Mentor | Blog preview card</title>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 	<body class="font-Figtree bg-Yellow w-screen text-Black">
-		<main class="flex justify-center items-center flex-col h-screen p-6">
+		<main class="flex justify-center items-center flex-col h-screen !p-6">
 			<section
-				class="bg-White rounded-2xl shadow-Black shadow-[8px_8px_0_0] p-6 hover:shadow-[16px_16px_0_0] border border-Black mobile:w-96"
+				class="bg-White rounded-2xl shadow-Black shadow-[8px_8px_0_0] p-6 hover:shadow-[16px_16px_0_0] border border-Black max-w-80 mobile:max-w-96"
 			>
 				<img
 					src="./images/illustration-article.svg"
@@ -34,7 +34,7 @@
 					<h2 class="font-extrabold text-xl hover:text-Yellow cursor-pointer">
 						HTML & CSS foundations
 					</h2>
-					<p class="font-medium text-Grey">
+					<p class="font-medium text-sm mobile:text-base text-Grey">
 						These languages are the backbone of every website, defining
 						structure, content, and presentation.
 					</p>
