minor changes made

--- a/Tailwind/Project 4 - Social Links profile/index.html
+++ b/Tailwind/Project 4 - Social Links profile/index.html
@@ -25,7 +25,7 @@
 			/>
 			<div class="contents">
 				<p class="font-semibold text-3xl mb-2 align-baseline">
-					<span class="text-5xl align-center">J</span>essica Randall
+					<span class="text-5xl align-middle">J</span>essica Randall
 				</p>
 				<p class="text-newGreen">London, United Kingdom</p>
 			</div>
