addede multiple shadows

--- a/Tailwind/Project 4 - Social Links profile/index.html
+++ b/Tailwind/Project 4 - Social Links profile/index.html
@@ -16,7 +16,7 @@
 		class="font-Inter text-newWhite bg-offBlack flex justify-center items-center min-h-screen"
 	>
 		<main
-			class="bg-darkGrey rounded-lg hover:ring-1 hover:ring-newGreen flex flex-col items-center p-8 space-y-8 border border-newWhite shadow-[inset_1px_1px_64px_1px] shadow-newWhite hover:border-none hover:shadow-none"
+			class="bg-darkGrey rounded-lg hover:ring-1 hover:ring-newGreen flex flex-col items-center p-8 space-y-8 border border-newWhite shadow-[inset_1px_1px_64px_1px,1px_1px_16px_1px] shadow-newWhite hover:border-none hover:shadow-none"
 		>
 			<img
 				src="./images/avatar-jessica.jpeg"
