--- a/Tailwind/Project 8 - Testimonial grid section/index.html
+++ b/Tailwind/Project 8 - Testimonial grid section/index.html
@@ -10,7 +10,7 @@
 			href="./images/favicon-32x32.png"
 		/>
 
-		<title>Frontend Mentor | [Challenge Name Here]</title>
+		<title>Frontend Mentor | <h1>Testimonial Geid Component</h1></title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body
